# MikoIDE

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  Contributing.md  LICENSE_ThirdParty.txt  README.md  bun.lockb  crash_reporter.cfg  credit.md  index.html  package-lock.json  package.json  product.json  readme.md  setupfrontend.cmd  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: build-alpha.yml  build-crossplatform.yml  build.yml
.hyperion/: cpp_config.yml
app/: app.cpp  client.cpp  client.hpp  config.hpp  logger.cpp  logger.hpp  main.cpp  resources.cpp  webapp.hpp
app/assets/: app.manifest  app.rc
app/bootstrap/: bootstrap.cpp  bootstrap.hpp  dialog.cpp  dialog.hpp  splashscreen.cpp  splashscreen.hpp  ui_factory.cpp  ui_factory.hpp  ui_interface.hpp
app/bootstrap/backup/: dialog.cpp  dialog.hpp
app/cli/: main.c
app/cli/core/: cli.h  executor.c  extensions.c  file_ops.c  parser.c  server.c  workspace.c
app/client/: app.cpp  app.hpp  client.cpp  client.hpp  mikoclient.cpp  mikoclient.hpp  offscreenrender.cpp  offscreenrender.hpp  renderermethods.cpp  windowed.cpp  windowed.hpp
app/client/platform/: sysplatform.cpp  sysplatform.hpp
app/cmake/main/: CMakeLists.txt
app/cmake/shared/: CMakeLists.txt  common.cmake
app/include/shared/: AppConfig.hpp  MikoApplication.hpp
app/internal/: simpleipc.cpp  simpleipc.hpp
app/renderer/: dx11_renderer.cpp  dx11_renderer.hpp  renderer_factory.cpp  renderer_factory.hpp  renderer_interface.cpp  renderer_interface.hpp
app/renderer/linux/: opengl_renderer.cpp  opengl_renderer.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
app/renderer/windows/: dx11_renderer.cpp  dx11_renderer.hpp
app/resources/: editor.hpp  menuoverlay.hpp  resources.cpp  resources.hpp  resourceutil.cpp  resourceutil.hpp  splash.hpp  webapp.hpp
app/resources/windows/: app.rc  compatibility.manifest  resource.h
app/src/main/: AppBrowser.cpp  AppClient.cpp
app/src/shared/: MikoApplication_impl.cpp
app/terminal/: processmanager.cpp  processmanager.hpp  renderer.cpp  renderer.hpp  terminalbuffer.cpp  terminalbuffer.hpp
app/toolchain/: toolchain.cpp  toolchain.hpp  windowed.cpp  windowed.hpp
app/utils/: config.hpp  logger.cpp  logger.hpp
app/webhelper/: main.cpp
cli/: CMakeLists.txt
cli/src/: miko.c
crashreport/: CMakeLists.txt
crashreport/src/: crash_handler.cpp  crash_handler.h  main.cpp  minidump_writer.cpp  minidump_writer.h
extensions/lsp/typescript/: index.js  package.json
languageserver/c/: CMakeLists.txt
languageserver/c/src/: c_lsp_wrapper.def  lsp_wrapper.hpp
languageserver/cpp/: CMakeLists.txt
languageserver/cpp/cmake/: emscripten.cmake
languageserver/cpp/src/: lsp_wrapper.cpp
locales/: jp.po  zh.po
mikobench/: buildweb.ts  index.html  package.json  tsconfig.app.json  vite.config.ts
mikobench/public/locales/: en.po  th.po
mikobench/src/: App.tsx  edtor.html  i18n.ts  index.css  index.html
mikobench/src/components/: DOMEditor.tsx  DOMTabBar.tsx  LanguageSwitcher.tsx  TitleBar.tsx  index.ts  navbar.tsx  statusbar.tsx
mikobench/src/contexts/: WorkbenchContext.tsx
mikobench/src/editor/: EditorApp.tsx  MonacoEditor.tsx  index.tsx
mikobench/src/mikoide/: workbench.tsx
mikobench/src/providers/: QueryProvider.tsx
mikobench/src/rootui/: App.tsx  index.css  index.html  index.tsx
mikobench/src/shared/: context.ts  menu.ts
mikobench/src/store/: editorSlice.ts  index.ts
mikoide/: index.css  index.tsx  vite-env.d.ts
mikoide/appearance/theme/: default.yml  init.ts  parser.ts
mikoide/assets/fonts/: fontmono.ts  fontsans.ts  index.ts
mikoide/components/: cmdpalette.tsx  menubar.tsx  sidebar.tsx  statusbar.tsx  titlebar.tsx
mikoide/components/dialog/: Dialog.tsx  DialogService.tsx  index.ts
mikoide/components/editor/: editor.tsx
mikoide/components/ide/: CodeEditor.tsx  FileExplorer.tsx  IDELayout.tsx  IDESidebar.tsx  SimpleTerminal.tsx  TabBar.tsx  Terminal.tsx
mikoide/components/interface/: capture.tsx  languageswitcher.tsx  menubar.tsx  tabbar.tsx  welcome.tsx
mikoide/components/panel/: bottompanel.tsx  leftpanel.tsx  rightpanel.tsx
mikoide/components/quickacess/: cmdpalette.tsx
mikoide/components/sidebar/: explorer.tsx  extensions.tsx  git.tsx  search.tsx
mikoide/components/terminal/: TerminalInstance.tsx  TerminalTab.tsx  TerminalView.tsx
mikoide/core/: chromeipc.ts  cmdpalettehandler.ts
mikoide/core/git/: operations.ts
mikoide/core/gitcontrol/: chromenative.ts  index.ts  webbrowser.ts
mikoide/data/: chromeipc.ts  menu-i18n.ts  menu.ts
mikoide/data/theme/: default.ts
mikoide/i18n/: en.ts  index.tsx  ja.ts  th.ts  zh.ts
mikoide/lib/: theme.ts
mikoide/pages/: Index.tsx
mikoide/root/: main.tsx
mikoide/store/: ide-store.ts
mikoide/styles/: index.css  monaco.css  titlebar.css
mikoshell/taskmgr/: index.html
mikoshell/taskmgr/ipc/: chromeipc.ts
mikoshell/taskmgr/src/: App.tsx  index.tsx
mikoshell/toolchainmgr/: index.html
mikoshell/toolchainmgr/src/: App.tsx  index.tsx
patch/: cef_editor.patch  cef_multilayer.patch
prereflex/: chromiumclient.cpp  chromiumclient.hpp  monaco.cpp  monaco.hpp  offscreen.cpp  offscreen.hpp  overlay.cpp  overlay.hpp  windowed.cpp  windowed.hpp
script/: codesign.ts  converticon.py  make.ts  mpa.ts  notarize.ts  requirements.txt
script/environment/: windows.ts
script/modules/: config.py  config.ts  file.ts  index.ts  log.ts  runner.ts
script/modules/tasks/: build.py  build.ts  (+6 more)
script/postprocessing/: buildcli.ts  buildinstall.ts
script/setupshell/: genbinary.ts
shared/theme/: cutie.yml  default.yml  extradark.yml  moondark.yml  nekodark.yml  nekolight.yml  sunlight.yml  vanilla.yml
shared/windows/: FileAssociation.nsh  buildinstaller.cmd  installer.nsi
test/termibench/: termibench.c
test/terminal/: main.cpp  windowed.cpp  windowed.hpp
test/themepreview/: main.py
test/toolchainmanager/: main.cpp
tools/: build.ts  buildtobin.py  clean.ts  cpplint.ts  iconconvert.py  prod.ts
tools/utils/: buildtobin.ts  iconconvert.ts
userdata/themes/: default.yml
(+74 files in other folders)
